--- a/demo.html
+++ b/demo.html
@@ -25,10 +25,10 @@
 				'-webkit-border-radius': '6px',
 				'-moz-border-radius': '6px',
 			},
-			video_list:[
+			video_list:[			
 				{title: 'Despacito', description: 'Despacito', thumbnail:'http://abbora.local/html5/asset/images/1.png', src: 'asset/videos/Despacito.mp4', type: 'video/mp4'},
 				{title: 'Reloi Cao Thai Son', description: 'Reloi Cao Thai Son', thumbnail:'http://abbora.local/html5/asset/images/2.png', src: 'asset/videos/reloi.MP4', type: 'video/mp4'},
-				{title: 'Xin dung lang im', description: 'Xin dung lang im', thumbnail:'http://abbora.local/html5/asset/images/3.png', src: 'asset/videos/xindunglangim.mp4', type: 'video/mp4'}
+				{title: 'Phia sau mot co gai', description: 'Phia sau mot co gai', thumbnail:'http://abbora.local/html5/asset/images/3.png', src: 'asset/videos/PhiaSauMotCoGai.mp4', type: 'video/mp4'}
 			],
 			get_current_video: function(video){
 			},
